Creacion y funcionalidad de todo, documentacion intengo de hacer el api a su vez que documentacion de esta misma

--- a/www/login.html
+++ b/www/login.html
@@ -80,17 +80,6 @@
                 <div class="divider">
                     <span>o continúa con</span>
                 </div>
-
-                <div class="social-login">
-                    <button type="button" class="btn-social google">
-                        <i class="fab fa-google"></i>
-                        <span>Google</span>
-                    </button>
-                    <button type="button" class="btn-social apple">
-                        <i class="fab fa-apple"></i>
-                        <span>Apple</span>
-                    </button>
-                </div>
             </form>
 
             <div class="signup-link">
@@ -104,6 +93,7 @@
         </div>
     </div>
 
-    <script src="js/login.js"></script>
+        <script src="js/api-client.js"></script>
+        <script src="js/login.js"></script>
 </body>
 </html>
