--- a/www/menu.html
+++ b/www/menu.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!-- Poner un temporizador para que se redirija al index -->
   <!-- Header -->
   <header class="main-header">
     <div class="header-content">
@@ -19,13 +20,13 @@
         <p>Cuida de tus mascotas hoy</p>
       </div>
       <div class="header-actions">
-        <button class="btn-icon notification-btn" id="notificationBtn">
+        <!-- <button class="btn-icon notification-btn" id="notificationBtn">
           <i class="fas fa-bell"></i>
           <span class="notification-badge">3</span>
-        </button>
-        <button class="btn-icon profile-btn" id="profileBtn">
+        </button> -->
+        <!-- <button class="btn-icon profile-btn" id="profileBtn">
           <i class="fas fa-user-circle"></i>
-        </button>
+        </button> -->
       </div>
     </div>
   </header>
