--- a/www/registro.html
+++ b/www/registro.html
@@ -18,7 +18,6 @@
 
 <body>
     <div class="login-container register-container">
-        
         <!-- Logo / Encabezado -->
         <div class="logo-section">
             <div class="logo-icon"><i class="fas fa-paw"></i></div>
@@ -63,10 +62,10 @@
                 </div>
 
                 <!-- Fuerza contraseña (barra + texto estilo Gmail) -->
-                <div class="pass-strength-container">
+                <!-- <div class="pass-strength-container">
                     <div class="pass-bar" id="passBar"></div>
                     <p class="pass-text" id="passText"></p>
-                </div>
+                </div> -->
 
                 <div class="input-group">
                     <div class="input-icon"><i class="fas fa-lock"></i></div>
@@ -81,6 +80,9 @@
                         <span class="label-text">Acepto los Términos y Condiciones</span>
                     </label>
                 </div>
+
+                <!-- Contenedor para mostrar errores o mensajes de estado -->
+                <div id="registroError" class="form-error hidden" role="alert" aria-live="polite" style="margin-bottom:12px;color:#b91c1c;"></div>
 
                 <button type="submit" class="btn-login" id="btnRegistro" disabled>
                     <span class="btn-text">Crear cuenta</span>
@@ -100,6 +102,7 @@
     </div>
 
     <!-- JS exclusivo -->
+    <script src="js/api-client.js"></script>
     <script src="js/registro.js"></script>
 </body>
 </html>
