Cambio sobre el nombre correcto de la aplicación en los diferentes apartados

--- a/www/creado.html
+++ b/www/creado.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cuenta creada - PetCare+</title>
+    <title>Cuenta creada - InmuPet+</title>
 
     <!-- Reutilizamos tu diseño base -->
     <link rel="stylesheet" href="css/login.css">
@@ -20,7 +20,7 @@
                 <i class="fas fa-check-circle"></i>
             </div>
             <h2 id="welcomeUserText">¡Cuenta creada con éxito!</h2>
-            <p class="subtitle">Bienvenido a PetCare+, tu apoyo para el cuidado de tus mascotas 🐾</p>
+            <p class="subtitle">Bienvenido a InmuPet+, tu apoyo para el cuidado de tus mascotas 🐾</p>
 
             <button id="goToMenuBtn" class="btn-login">
                 Ir al menú
