--- a/www/historial_medico.html
+++ b/www/historial_medico.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Historial Médico - PetCare+</title>
+  <title>Historial Médico - InmuPet+</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/historial_medico.css">
   <link rel="stylesheet" href="css/pages/medical-history.css">
