--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
                         <div class="icon-bg-circle-2"></div>
                     </div>
                     <h1 class="slide-title">
-                        Bienvenido a <span class="gradient-text">PetCare+</span>
+                        Bienvenido a <span class="gradient-text">InmuPet+</span>
                     </h1>
                     <p class="slide-description">
                         La mejor app para gestionar la salud de tus mascotas. 
