--- a/www/login.html
+++ b/www/login.html
@@ -22,7 +22,7 @@
             <div class="logo-icon">
                 <i class="fas fa-paw"></i>
             </div>
-            <h1 class="app-name">PetCare<span class="plus">+</span></h1>
+            <h1 class="app-name">InmuPet<span class="plus">+</span></h1>
             <p class="app-tagline">Cuida de tus mascotas</p>
         </div>
 
@@ -100,7 +100,7 @@
 
         <!-- Footer -->
         <div class="login-footer">
-            <p>© 2024 PetCare+. Todos los derechos reservados.</p>
+            <p>© 2024 InmuPet+. Todos los derechos reservados.</p>
         </div>
     </div>
 
