--- a/www/registro.html
+++ b/www/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro - PetCare+</title>
+    <title>Registro - InmuPet+</title>
 
     <!-- Reutilizamos el estilo base del login -->
     <link rel="stylesheet" href="css/login.css">
@@ -22,7 +22,7 @@
         <!-- Logo / Encabezado -->
         <div class="logo-section">
             <div class="logo-icon"><i class="fas fa-paw"></i></div>
-            <h1 class="app-name">PetCare<span class="plus">+</span></h1>
+            <h1 class="app-name">InmuPet<span class="plus">+</span></h1>
             <p class="app-tagline">Crea tu cuenta y cuida de tus mascotas</p>
         </div>
 
@@ -95,7 +95,7 @@
         </div>
 
         <div class="login-footer">
-            <p>© 2024 PetCare+. Todos los derechos reservados.</p>
+            <p>© 2024 InmuPet+. Todos los derechos reservados.</p>
         </div>
     </div>
 
