--- a/www/registro.html
+++ b/www/registro.html
@@ -16,7 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="login-page">
     <div class="login-container register-container">
         
         <!-- Logo / Encabezado -->
