--- a/www/menu.html
+++ b/www/menu.html
@@ -19,13 +19,13 @@
         <p>Cuida de tus mascotas hoy</p>
       </div>
       <div class="header-actions">
-        <button class="btn-icon notification-btn" id="notificationBtn">
+        <button class="btn-icon notification-btn" id="notificationBtn" title="Notificaciones">
           <i class="fas fa-bell"></i>
           <span class="notification-badge">3</span>
         </button>
-        <button class="btn-icon profile-btn" id="profileBtn">
+        <a href="profile.html" class="btn-icon profile-btn" id="profileBtn" title="Mi perfil">
           <i class="fas fa-user-circle"></i>
-        </button>
+        </a>
       </div>
     </div>
   </header>
@@ -126,7 +126,7 @@
     <section class="upcoming-events-section">
       <div class="section-header">
         <h2>Próximos Eventos</h2>
-        <a href="calendar.html" class="view-all">Ver todo <i class="fas fa-arrow-right"></i></a>
+        <a href="calendario.html" class="view-all">Ver todo <i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="events-list" id="eventsList">
         <div class="event-card">
@@ -142,10 +142,9 @@
         </div>
       </div>
     </section>
-  </main>
+  </main><br><br><br><br><br><br>
 
   <!-- 🔽 Modal para agregar mascota -->
-<<<<<<< HEAD
 <div class="modal-overlay" id="petModal">
     <div class="modal-container">
         <!-- Header del Modal -->
