--- a/www/citas.html
+++ b/www/citas.html
@@ -14,9 +14,9 @@
             <i class="fas fa-arrow-left"></i>
         </button>
         <h1>Mis Citas</h1>
-        <button class="filter-btn" id="filterBtn">
+        <!-- <button class="filter-btn" id="filterBtn">
             <i class="fas fa-filter"></i>
-        </button>
+        </button> -->
     </header>
 
     <!-- Estadísticas rápidas -->
