--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0">
     <title>Bienvenido a INMUPET</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
@@ -138,6 +138,7 @@
         </div>
     </div>
 
-    <script src="js/onboarding.js"></script>
+    <script src="js/sessionManager.js"></script>
+    <script src="js/Onboarding.js"></script>
 </body>
 </html>
