--- a/www/registro.html
+++ b/www/registro.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0" />
     <title>Registro - PetCare+</title>
 
     <!-- Reutilizamos el estilo base del login -->
@@ -60,12 +60,6 @@
                     <div class="input-icon"><i class="fas fa-lock"></i></div>
                     <input type="password" id="contrasena" placeholder="Contraseña" required autocomplete="new-password">
                     <button type="button" class="toggle-password" id="togglePass"><i class="fas fa-eye"></i></button>
-                </div>
-
-                <!-- Fuerza contraseña (barra + texto estilo Gmail) -->
-                <div class="pass-strength-container">
-                    <div class="pass-bar" id="passBar"></div>
-                    <p class="pass-text" id="passText"></p>
                 </div>
 
                 <div class="input-group">
