--- a/www/calendario.html
+++ b/www/calendario.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0">
   <title>Calendario - PetCare+</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- eliminado: anteriormente referenciaba css/pages/calendar.css (no existe) -->
