--- a/www/creado.html
+++ b/www/creado.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0" />
     <title>Cuenta creada - PetCare+</title>
 
     <!-- Reutilizamos tu diseño base -->
