--- a/www/login.html
+++ b/www/login.html
@@ -2,12 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0">
     <title>Login - PetCare+</title>
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/pages/login.css">
-
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -63,14 +61,6 @@
                     </button>
                 </div>
 
-                <div class="form-options">
-                    <label class="remember-me">
-                        <input type="checkbox" id="rememberMe">
-                        <span class="checkmark"></span>
-                        <span class="label-text">Recordarme</span>
-                    </label>
-                    <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
-                </div>
 
                 <button type="submit" class="btn-login">
                     <span class="btn-text">Iniciar Sesión</span>
@@ -89,6 +79,7 @@
         </div>
     </div>
 
+    <script src="js/sessionManager.js"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
