--- a/www/menu.html
+++ b/www/menu.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0">
   <title>Inicio - PetCare+</title>
   <link rel="stylesheet" href="css/menu.css">
   <link rel="stylesheet" href="css/style.css">
@@ -328,12 +328,12 @@
   <nav class="bottom-nav">
     <a href="menu.html" class="nav-item active"><i class="fas fa-home"></i><span>Inicio</span></a>
     <a href="calendario.html" class="nav-item"><i class="fas fa-calendar"></i><span>Calendario</span></a>
-    <a href="#" class="nav-item add-button" id="quickAddBtn"><div class="add-icon"><i class="fas fa-plus"></i></div></a>
-    <a href="search.html" class="nav-item"><i class="fas fa-search"></i><span>Buscar</span></a>
     <a href="profile.html" class="nav-item"><i class="fas fa-user"></i><span>Perfil</span></a>
+    <a href="#" class="nav-item add-button" id="quickAddBtn"><div class="add-icon"><i class="fas fa-plus"></i></div></a>
   </nav>
 
   <!-- Scripts -->
+<script src="js/sessionManager.js"></script>
 <script src="js/menu.js"></script>
 </body>
 </html>
