--- a/www/profile.html
+++ b/www/profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0">
     <title>Mi Perfil - Veterinaria</title>
 <link rel="stylesheet" href="css/profile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -137,6 +137,7 @@
         <span id="notification-text">Cambios guardados correctamente</span>
     </div>
 
+    <script src="js/sessionManager.js"></script>
     <script src="js/profile.js"></script>
 </body>
 
