--- a/www/recordatorios.html
+++ b/www/recordatorios.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0">
     <title>Recordatorios - PetCare+</title>
     <link rel="stylesheet" href="css/recordatorios.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -284,11 +284,11 @@
             </div>
         </button>
         
-        <a href="historial.html" class="nav-item">
+        <a href="historial_medico.html" class="nav-item">
             <i class="fas fa-file-medical"></i>
             <span>Historial</span>
         </a>
-        <a href="#" class="nav-item" onclick="alert('Función próximamente')">
+        <a href="profile.html" class="nav-item" onclick="">
             <i class="fas fa-user"></i>
             <span>Perfil</span>
         </a>
