--- a/www/citas.html
+++ b/www/citas.html
@@ -223,7 +223,14 @@
         </div>
     </div>
 
-    <!-- Navegación Inferior CON BOTÓN CENTRAL -->
+    <!-- Botón Flotante de Agregar -->
+    <button class="nav-item-center" id="addAppointmentBtn">
+        <div class="add-btn-circle">
+            <i class="fas fa-plus"></i>
+        </div>
+    </button>
+
+    <!-- Navegación Inferior -->
     <nav class="bottom-nav">
         <a href="menu.html" class="nav-item">
             <i class="fas fa-home"></i>
@@ -233,19 +240,7 @@
             <i class="fas fa-calendar-check"></i>
             <span>Citas</span>
         </a>
-        
-        <!-- BOTÓN CENTRAL DE AGREGAR -->
-        <button class="nav-item-center" id="addAppointmentBtn">
-            <div class="add-btn-circle">
-                <i class="fas fa-plus"></i>
-            </div>
-        </button>
-        
-        <a href="#" class="nav-item" onclick="alert('Función próximamente')">
-            <i class="fas fa-search"></i>
-            <span>Buscar</span>
-        </a>
-        <a href="#" class="nav-item" onclick="alert('Función próximamente')">
+        <a href="profile.html" class="nav-item">
             <i class="fas fa-user"></i>
             <span>Perfil</span>
         </a>
