--- a/www/citas.html
+++ b/www/citas.html
@@ -223,23 +223,17 @@
         </div>
     </div>
 
-    <!-- Botón Flotante de Agregar -->
-    <button class="nav-item-center" id="addAppointmentBtn">
-        <div class="add-btn-circle">
-            <i class="fas fa-plus"></i>
-        </div>
-    </button>
-
     <!-- Navegación Inferior -->
     <nav class="bottom-nav">
         <a href="menu.html" class="nav-item">
             <i class="fas fa-home"></i>
             <span>Inicio</span>
         </a>
-        <a href="citas.html" class="nav-item active">
-            <i class="fas fa-calendar-check"></i>
-            <span>Citas</span>
-        </a>
+        <button class="nav-item nav-item-center" id="addAppointmentBtn">
+            <div class="add-btn-circle">
+                <i class="fas fa-plus"></i>
+            </div>
+        </button>
         <a href="profile.html" class="nav-item">
             <i class="fas fa-user"></i>
             <span>Perfil</span>
