--- a/www/historial_medico.html
+++ b/www/historial_medico.html
@@ -279,22 +279,12 @@
             <i class="fas fa-home"></i>
             <span>Inicio</span>
         </a>
-        <a href="citas.html" class="nav-item">
-            <i class="fas fa-calendar-check"></i>
-            <span>Citas</span>
-        </a>
-        
-        <button class="nav-item-center" id="addRegistroBtn">
+        <button class="nav-item nav-item-center" id="addRegistroBtn">
             <div class="add-btn-circle">
                 <i class="fas fa-plus"></i>
             </div>
         </button>
-        
-        <a href="historial.html" class="nav-item active">
-            <i class="fas fa-file-medical"></i>
-            <span>Historial</span>
-        </a>
-        <a href="#" class="nav-item" onclick="alert('Función próximamente')">
+        <a href="profile.html" class="nav-item">
             <i class="fas fa-user"></i>
             <span>Perfil</span>
         </a>
