--- a/www/profile.html
+++ b/www/profile.html
@@ -14,7 +14,7 @@
         <div class="header-content">
             <div class="logo">
                 <i class="fas fa-paw"></i>
-                <span>Veterinaria</span>
+                <span>PetCare</span>
             </div>
             <button class="hamburger" id="hamburger">
                 <i class="fas fa-bars"></i>
